--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.shadowbox{
+  box-shadow: -7px -8px 15px -7px #dbcccc;
+}
