Add Navbar stylization

--- a/expenses.frontend/src/index.css
+++ b/expenses.frontend/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a:link, a:visited {
+  background-color: lightblue;
+  color: black;
+  border: 2px solid gray;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: rgb(181, 181, 243);
+  color: white;
+}
